src/test/deca/syntax/valid/minus_void_minus_decl_var.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à 
//      gauche de l'opérateur - avec une variable déclarée à droite).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 06/06/2023 par gl03


{
    int x;
    int y= -x;
    print(y);
}
