src/test/deca/syntax/invalid/readany/minus_readfloat_minus_void.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      droite de l'opérateur + avec un readFloat à gauche).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{
    float y= readFloat()+;
    print(y);
}